[gd_scene load_steps=3 format=3 uid="uid://cvt785qoocb7p"]

[ext_resource type="Theme" uid="uid://c2jpugora5i0n" path="res://theme.tres" id="1_1042o"]
[ext_resource type="Script" path="res://title.gd" id="1_k53si"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k53si")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1042o")
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_1042o")
text = "Play"

[node name="Edit" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_1042o")
text = "Edit"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_1042o")
text = "Quit"

[connection signal="button_down" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Edit" to="." method="_on_edit_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
